@startuml
'https://plantuml.com/class-diagram

class HelloApplication{
    + void start()
    + {method} {static} void main()
}

class HelloController{
    {field} - my_canvas : Canvas
    - {field} sides_number : TextField
    - {field} labe1 : Label
    - {method} void  onHelloButtonClick()
}
abstract class Shape {
    {field} - ShapeColor : Color;
    {abstract} {method} + String toString()
    {abstract} {method} + void DrawShape()
    {method} + void setColor()
    {method} + void ClearCanvas()
    {method} + Shape()
}

class mnogougolniki {
    {field} - int SNum
    {field} - int Radius
    + void mnogougolniki()
    + String getColor()

}

Shape --|> mnogougolniki
mnogougolniki --|> HelloController
HelloController --|> HelloApplication
@enduml